--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 auto-commit.sh
 run.sh
+node_modules
+.next
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
+.env.production
+.env.local
